k3s-lab/sample-apps/nginx-hello/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: sample-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: nginx-hello
      containers:
        - name: nginx-hello
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/templates/index.html.template
              subPath: index.html.template
            - name: config
              mountPath: /docker-entrypoint.d/99-generate-index.sh
              subPath: generate-index.sh
      volumes:
        - name: config
          configMap:
            name: nginx-hello-config
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: sample-apps
spec:
  type: NodePort
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
